--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dependencies:
 
   firebase_core: "^1.1.0"
   cloud_firestore: "^2.0.0"
+  firebase_auth: "^1.1.3"
+  google_sign_in: "^4.5.1"
+  flutter_signin_button: ^2.0.0
+
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
